--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.5.2",
-		"@types/node": "^16.18.32",
 		"@types/react": "^18.2.6",
 		"@types/react-dom": "^18.2.4",
 		"@types/react-redux": "^7.1.25",
@@ -16,22 +15,21 @@
 		"lodash": "^4.17.21",
 		"lottie-react": "^2.4.0",
 		"moment": "^2.29.4",
+		"path": "^0.12.7",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.0-beta.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.45.1",
 		"react-redux": "^8.1.0",
 		"react-router-dom": "^6.13.0",
-		"react-scripts": "5.0.1",
 		"sass": "^1.62.1",
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
 		"lint": "eslint src/**/*.{tsx,ts,js,jsx}",
 		"lint-fix": "eslint src/**/*.{tsx,ts,js,jsx} --fix",
 		"prepare": "husky install"
@@ -65,12 +63,18 @@
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.195",
-		"@typescript-eslint/eslint-plugin": "^5.59.6",
-		"@typescript-eslint/parser": "^5.59.6",
-		"eslint-config-prettier": "^8.8.0",
+		"@types/node": "^22.17.1",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
+		"@vitejs/plugin-react": "^5.0.0",
+		"eslint": "^8.57.1",
+		"eslint-config-prettier": "^8.10.2",
 		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-hooks": "^5.2.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.2",
-		"prettier": "^2.8.8"
+		"prettier": "^2.8.8",
+		"vite": "^7.1.1"
 	}
 }
